Fixed too large font size

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  font-size: 20px;
+  font-size: 18px;
   margin: 30px;
   padding: 30px;
   background-color: white;
